--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "vuestore",
-  "version": "0.0.1",
-  "description": "",
+  "name": "@tingyuan/vue-store",
+  "version": "0.0.2",
+  "description": "simpler vuex alternative",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/index.min.js",
+  "jsdelivr": "dist/index.min.js",
   "types": "./types/index.ts",
+  "sideEffects": false,
   "directories": {
     "example": "example",
     "lib": "lib"
@@ -13,14 +17,21 @@
     "types"
   ],
   "scripts": {
-    "build": "npx rollup -c ./rollup.config.js"
+    "build": "rm -rf dist && npx rollup -c ./rollup.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lovetingyuan/simple-vuex.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "vuex",
+    "vue",
+    "store",
+    "redux",
+    "flux",
+    "reducer"
+  ],
+  "author": "tingyuan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lovetingyuan/simple-vuex/issues"
@@ -34,6 +45,8 @@
   },
   "devDependencies": {
     "rollup": "^1.19.4",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-typescript": "^1.0.1",
     "typescript": "^3.5.3"
   }
