--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -30,7 +30,7 @@
     "./src/**/*.tsx",
     "./src/**/*.vue",
     "./tests/**/*.ts",
-    "./tests/**/*.tsx"
+    "./tests/**/*.tsx", "types/shims-vue.d.ts", "types/shims-tsx.d.ts", "types/shims-vuestore.d.ts"
   ],
   "exclude": [
     "node_modules"
