--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "rm -rf ./node_modules/.cache && vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "check": "npx npm-check-updates"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -23,7 +24,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.2.2",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "typescript": "^3.4.3",
