--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tingyuan/vue-store",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "simpler vuex alternative",
   "main": "dist/vue-store.common.js",
   "module": "dist/vue-store.esm.js",
@@ -46,18 +46,18 @@
     "tslib": "^1.10.0",
     "vue": "^2.6.10",
     "vuex": "^3.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-standard-with-typescript": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-standard-with-typescript": "^9.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "rollup": "^1.19.4",
+    "eslint-plugin-standard": "^4.0.1",
+    "rollup": "^1.21.4",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript": "^1.0.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   },
   "eslintConfig": {
     "extends": "standard-with-typescript",
@@ -65,101 +65,7 @@
       "project": "./tsconfig.json"
     },
     "rules": {
-      "camelcase": "off",
-      "indent": "off",
-      "no-array-constructor": "off",
-      "no-undef": "off",
-      "no-unused-vars": "off",
-      "no-useless-constructor": "off",
-      "@typescript-eslint/adjacent-overload-signatures": "error",
-      "@typescript-eslint/array-type": [
-        "error",
-        {
-          "default": "array-simple"
-        }
-      ],
-      "@typescript-eslint/camelcase": [
-        "error",
-        {
-          "properties": "never"
-        }
-      ],
-      "@typescript-eslint/explicit-function-return-type": [
-        "error",
-        {
-          "allowHigherOrderFunctions": true
-        }
-      ],
-      "@typescript-eslint/explicit-member-accessibility": "error",
-      "@typescript-eslint/indent": [
-        "error",
-        2,
-        {
-          "SwitchCase": 1,
-          "VariableDeclarator": 1,
-          "outerIIFEBody": 1,
-          "MemberExpression": 1,
-          "FunctionDeclaration": {
-            "parameters": 1,
-            "body": 1
-          },
-          "FunctionExpression": {
-            "parameters": 1,
-            "body": 1
-          },
-          "CallExpression": {
-            "arguments": 1
-          },
-          "ArrayExpression": 1,
-          "ObjectExpression": 1,
-          "ImportDeclaration": 1,
-          "flatTernaryExpressions": false,
-          "ignoreComments": false
-        }
-      ],
-      "@typescript-eslint/member-delimiter-style": [
-        "error",
-        {
-          "multiline": {
-            "delimiter": "none"
-          },
-          "singleline": {
-            "delimiter": "comma",
-            "requireLast": false
-          }
-        }
-      ],
-      "@typescript-eslint/no-array-constructor": "error",
-      "@typescript-eslint/no-empty-interface": "error",
-      "@typescript-eslint/no-extraneous-class": "error",
-      "@typescript-eslint/no-for-in-array": "error",
-      "@typescript-eslint/no-misused-new": "error",
-      "@typescript-eslint/no-namespace": "error",
-      "@typescript-eslint/no-non-null-assertion": "error",
-      "@typescript-eslint/no-this-alias": [
-        "error",
-        {
-          "allowDestructuring": true
-        }
-      ],
-      "@typescript-eslint/no-unnecessary-type-assertion": "error",
-      "@typescript-eslint/no-unused-vars": "error",
-      "@typescript-eslint/no-use-before-define": [
-        "error",
-        {
-          "functions": false,
-          "classes": false,
-          "variables": false,
-          "typedefs": false
-        }
-      ],
-      "@typescript-eslint/no-useless-constructor": "error",
-      "@typescript-eslint/no-var-requires": "error",
-      "@typescript-eslint/prefer-function-type": "error",
-      "@typescript-eslint/promise-function-async": "off",
-      "@typescript-eslint/restrict-plus-operands": "error",
-      "@typescript-eslint/require-array-sort-compare": "error",
-      "@typescript-eslint/type-annotation-spacing": "error"
+      "@typescript-eslint/strict-boolean-expressions": "off"
     }
   },
   "eslintIgnore": [
