--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/vue-store.esm.js",
   "unpkg": "dist/vue-store.min.js",
   "jsdelivr": "dist/vue-store.min.js",
-  "types": "./types/index.ts",
+  "types": "./types.ts",
   "sideEffects": false,
   "directories": {
     "example": "example",
@@ -42,22 +42,22 @@
   },
   "homepage": "https://github.com/lovetingyuan/vue-store#readme",
   "devDependencies": {
-    "@types/node": "^12.6.6",
-    "tslib": "^1.10.0",
-    "vue": "^2.6.10",
-    "vuex": "^3.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "eslint": "^6.4.0",
-    "eslint-config-standard-with-typescript": "^9.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
+    "@types/node": "^13.7.0",
+    "tslib": "^1.11.0",
+    "vue": "^2.6.11",
+    "vuex": "^3.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "rollup": "^1.21.4",
+    "rollup": "^1.31.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.8.2"
   },
   "eslintConfig": {
     "extends": "standard-with-typescript",
