--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "npm run lint && rm -rf dist && npx rollup -c ./rollup.config.js",
-    "lint": "npx eslint --ext .js,.ts lib/vue-store.ts --fix",
+    "lint": "npx eslint --ext .js,.ts --fix ./",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -46,16 +46,16 @@
     "tslib": "^1.11.0",
     "vue": "^2.6.11",
     "vuex": "^3.1.2",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
     "eslint": "^6.8.0",
-    "eslint-config-standard-with-typescript": "^14.0.0",
+    "eslint-config-standard-with-typescript": "^15.0.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "rollup": "^1.31.0",
+    "rollup": "^2.6.1",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript": "^1.0.1",
     "typescript": "^3.8.2"
   },
